[package]
name = "demo_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
libtw2-demo = { git = "https://github.com/heinrich5991/libtw2" }
libtw2-packer = { git = "https://github.com/heinrich5991/libtw2" }
libtw2-snapshot = { git = "https://github.com/heinrich5991/libtw2" }
libtw2-gamenet = { package = "libtw2-gamenet-teeworlds-0-6", git = "https://github.com/heinrich5991/libtw2" }
warn = "0.2.2"
twsnap = "0.2.0"
rayon = "1.10.0"
serde_json = "1.0.125"
rsn = "0.1.0"
toml = "0.8.19"
yaml = "0.3.0"
serde_yaml = "0.9.34"
serde = { version = "1.0.208", features = ["derive"] }
