[package]
name = "demo_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
twsnap = "0.2.0"
rayon = "1.10.0"
serde_json = "1.0.125"
rsn = "0.1.0"
toml = "0.8.19"
yaml = "0.3.0"
serde_yaml = "0.9.34"
fixed = {version="1.24.0", features = ["serde"]}
serde = { version = "1.0.208", features = ["derive"] }
stringlit = "2.1.0"
graplot = "0.1.22"
eframe = { version = "0.28.1" }
winit = "0.29.15"
egui-dropdown = "0.10.0"
egui_plot = "0.28.1"
